--- a/ceqellreport.html
+++ b/ceqellreport.html
@@ -1,3 +1,5 @@
+<!-- ALL RIGHTS RESERVED. COPYRIGHT 2026 -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -159,4 +161,5 @@
     </script>
 
 </body>
+
 </html>
