--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- ALL RIGHTS RESERVED. COPYRIGHT 2026 -->
+<!-- SOME RIGHTS RESERVED UNDER CC BY-NC-ND. COPYRIGHT 2026 https://creativecommons.org/licenses/by-nc-nd/4.0/ -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,7 +11,7 @@
     <meta name="copyright" content="Ceqell">
     <meta name="description" content="My experiences and takes from my adminship">
     
-    <link rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">
+    <link rel="license" href="https://creativecommons.org/licenses/by-nc-nd/4.0/">
     
     <meta property="og:title" content="The Ceqell Report; On Governance" />
     <meta property="og:description" content="My experiences and takes from my adminship" />
@@ -172,4 +172,5 @@
 </body>
 
 </html>
+
 
