--- a/1/index.html
+++ b/1/index.html
@@ -3,7 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Ceqell Report on Governance 2</title>
+    <meta name="author" content="Ceqell">
+    <meta name="copyright" content="Ceqell">
+    <meta name="description" content="My experiences and takes from my adminship">
+
+    <link rel="license" href="https://creativecommons.org/licenses/by-nc-nd/4.0/">
+
+    <meta property="og:title" content="The Ceqell Report; On Governance" />
+    <meta property="og:description" content="My experiences and takes from my adminship" />
+    <meta property="og:type" content="article" /> <meta property="og:site_name" content="The Ceqell Report" />
+    <meta name="theme-color" content="#000000">
+    <title>The Ceqell Report; On Governance</title>
     <style>
         /* Reset default browser margins to ensure full screen */
         body, html {
@@ -38,6 +48,7 @@
         <div style="text-align: center; padding: 20px; font-family: sans-serif;">
             <p>It appears your web browser does not support embedded PDFs.</p>
             <a href="theceqellreportongovernance2.pdf" style="background-color: #007bff; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px;">
+                Click here to view the PDF
             </a>
         </div>
         
