--- a/1/index.html
+++ b/1/index.html
@@ -54,5 +54,21 @@
         
     </iframe>
 
+    <footer prefix="dct: http://purl.org/dc/terms/ cc: http://creativecommons.org/ns#">
+        <span>
+            <a property="dct:title" rel="cc:attributionURL" href="https://ceqell.github.io/theceqellreport/1/">The Ceqell Report; On Governance</a> 
+            © 2025 by 
+            <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://www.ceqell.org">John D. Ceqell | Khonthee Jaroensiriphan</a> 
+            is licensed under 
+            <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">
+                CC BY-NC-ND 4.0
+                <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="">
+                <img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="">
+                <img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="">
+                <img src="https://mirrors.creativecommons.org/presskit/icons/nd.svg" alt="">
+            </a>
+        </span>
+    </footer>
+
 </body>
 </html>
