--- a/1/index.html
+++ b/1/index.html
@@ -118,7 +118,7 @@
         <span>
             <a property="dct:title" rel="cc:attributionURL" href="https://ceqell.github.io/theceqellreport/1/">The Ceqell Report; On Governance</a> 
             © 2025 by 
-            <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://www.ceqell.org">John D. Ceqell | Khonthee Jaroensiriphan</a> 
+            <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://www.ceqell.me">John D. Ceqell | Khonthee Jaroensiriphan</a> 
             is licensed under 
             <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="license noopener noreferrer" class="cc-icons">
                 CC BY-NC-ND 4.0
